// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-progress with args { label: 'new progress label' } 1`] = `
<mg-progress aria-busy="true" aria-label="new progress label" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" role="progressbar">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar" style="--mg-c-progress-value: 0%;"></div>
    </div>
  </template>
</mg-progress>
`;

exports[`mg-progress with args { label: 'progress' } 1`] = `
<mg-progress aria-busy="true" aria-label="progress" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" role="progressbar">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar" style="--mg-c-progress-value: 0%;"></div>
    </div>
  </template>
</mg-progress>
`;

exports[`mg-progress with args { label: 'progress', ariaRole: 'meter' } 1`] = `
<mg-progress aria-label="progress" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" role="meter">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar" style="--mg-c-progress-value: 0%;"></div>
    </div>
  </template>
</mg-progress>
`;

exports[`mg-progress with args { label: 'progress', value: 10 } 1`] = `
<mg-progress aria-busy="true" aria-label="progress" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" role="progressbar">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar mg-c-progress__bar--active" style="--mg-c-progress-value: 10%;"></div>
    </div>
  </template>
</mg-progress>
`;

exports[`mg-progress with args { label: 'progress', value: 10, max: 10 } 1`] = `
<mg-progress aria-busy="false" aria-label="progress" aria-valuemax="10" aria-valuemin="0" aria-valuenow="10" role="progressbar">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar mg-c-progress__bar--active" style="--mg-c-progress-value: 100%;"></div>
    </div>
  </template>
</mg-progress>
`;

exports[`mg-progress with args { label: 'progress', value: 10, max: 15 } 1`] = `
<mg-progress aria-busy="true" aria-label="progress" aria-valuemax="15" aria-valuemin="0" aria-valuenow="10" role="progressbar">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar mg-c-progress__bar--active" style="--mg-c-progress-value: 67%;"></div>
    </div>
  </template>
</mg-progress>
`;

exports[`mg-progress with args { label: 'progress', value: 10, min: 5 } 1`] = `
<mg-progress aria-busy="true" aria-label="progress" aria-valuemax="100" aria-valuemin="5" aria-valuenow="10" role="progressbar">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar mg-c-progress__bar--active" style="--mg-c-progress-value: 5%;"></div>
    </div>
  </template>
</mg-progress>
`;

exports[`mg-progress with args { label: 'progress', value: 10, min: 5, max: 15 } 1`] = `
<mg-progress aria-busy="true" aria-label="progress" aria-valuemax="15" aria-valuemin="5" aria-valuenow="10" role="progressbar">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar mg-c-progress__bar--active" style="--mg-c-progress-value: 50%;"></div>
    </div>
  </template>
</mg-progress>
`;

exports[`mg-progress with args { label: 'progress', value: 30, max: 50, valueText: '30€ of 50€' } 1`] = `
<mg-progress aria-busy="true" aria-label="progress" aria-valuemax="50" aria-valuemin="0" aria-valuenow="30" aria-valuetext="30€ of 50€" role="progressbar">
  <template shadowrootmode="open">
    <div class="mg-c-progress">
      <div class="mg-c-progress__bar mg-c-progress__bar--active" style="--mg-c-progress-value: 60%;"></div>
    </div>
  </template>
</mg-progress>
`;
